--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: ruby
 rvm:
   - 2.1.5
@@ -8,7 +7,7 @@ env:
 
 install:
   # Install Ansible.
-  - pip install ansible
+  - sudo pip install ansible
 
 script:
   - ruby --version
