--- a/tests/provisioning/playbook.yml
+++ b/tests/provisioning/playbook.yml
@@ -2,6 +2,7 @@
 - hosts: all
   sudo: yes
   roles:
+    - gmaissa.common
     - mailcatcher
   tasks:
     - name: RedHat | Install iptables service
