--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - PLAYBOOK=provisioning/playbook-travis.yml INVENTORY=provisioning/travis
 
 before_install:
-  - sudo apt-get remove ruby rubygems
+  - sudo apt-get remove ruby rubygems ruby-dev
 
 install:
   # Install Ansible.
