debugging package installation

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -22,6 +22,9 @@
       - rubygems
       - ruby-dev
   when: ansible_os_family == 'Debian'
+  register: pkg_install
+
+- debug: var=pkg_install
 
 - name: Check ruby version
   command: ruby --version
