--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - PLAYBOOK=provisioning/playbook-travis.yml INVENTORY=provisioning/travis
 
 before_install:
-  - gem1.8 list | cut -d" " -f1 | xargs sudo gem1.8 uninstall -aIx
+  - gem list | cut -d" " -f1 | xargs sudo gem1.8 uninstall -aIx
   - sudo apt-get remove ruby rubygems ruby-dev libruby1.8 ruby1.8 ruby1.8-dev rubygems1.8
   - dpkg --get-selections |grep ruby
 
