--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ script:
   # Run the role/playbook with ansible-playbook.
   - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
 
+  # Run the role/playbook with ansible-playbook.
+  - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
+
 #  # Run the role/playbook again, checking to make sure it's idempotent.
 #  - >
 #    ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo
