--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,26 @@ language: python
 python: "2.7"
 
 env:
-  - PLAYBOOK=provisioning/playbook-travis.yml INVENTORY=provisioning/travis
+  - PLAYBOOK=tests/playbook-travis.yml INVENTORY=tests/inventory
 
 before_install:
   - sudo apt-get remove ruby rubygems ruby-dev libruby1.8 ruby1.8 ruby1.8-dev rubygems1.8
   - dpkg --get-selections |grep ruby
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq python-apt python-pycurl
 
 install:
   # Install Ansible.
   - sudo pip install ansible
 
-script:
-  - "cd tests"
-  # Check the role/playbook's syntax.
-  - "ansible-playbook $PLAYBOOK -i $INVENTORY --syntax-check"
+before_script:
+  # Add ansible.cfg to pick up roles path.
+  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  - echo localhost > $INVENTORY
 
-  # Run the role/playbook with ansible-playbook.
-  - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
+script:
+  # Check playbook's syntax.
+  - "ansible-playbook $PLAYBOOK -i $INVENTORY --syntax-check"
 
   # Run the role/playbook with ansible-playbook.
   - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
