need to wait a bit before checking if mailcatcher service has started

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ script:
   # Run the role/playbook with ansible-playbook.
   - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
 
+  # Run the role/playbook with ansible-playbook.
+  - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
+
 #  # Run the role/playbook again, checking to make sure it's idempotent.
 #  - >
 #    ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo
@@ -36,4 +39,4 @@ script:
 #    || (echo 'Idempotence test: fail' && exit 1)
 
   # Tests to make sure Mailcatcher is running and responds.
-  - curl http://localhost:1080 || exit 1
+  - (sleep 5; curl http://localhost:1080) || exit 1
