--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 
 install:
   # Install Ansible.
-  - sudo pip install ansible
+  - pip install ansible>=1.6
 
 before_script:
   # Add ansible.cfg to pick up roles path.
@@ -28,15 +28,12 @@ script:
   # Run the role/playbook with ansible-playbook.
   - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
 
-  # Run the role/playbook with ansible-playbook.
-  - "ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo"
-
-#  # Run the role/playbook again, checking to make sure it's idempotent.
-#  - >
-#    ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo
-#    | grep -q 'changed=0.*failed=0'
-#    && (echo 'Idempotence test: pass' && exit 0)
-#    || (echo 'Idempotence test: fail' && exit 1)
+  # Run the role/playbook again, checking to make sure it's idempotent.
+  - >
+    ansible-playbook $PLAYBOOK -i $INVENTORY --connection=local --sudo
+    | grep -q 'changed=0.*failed=0'
+    && (echo 'Idempotence test: pass' && exit 0)
+    || (echo 'Idempotence test: fail' && exit 1)
 
   # Tests to make sure Mailcatcher is running and responds.
   - (sleep 5; curl http://localhost:1080) || exit 1
