--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -55,3 +55,9 @@
   when: (ansible_distribution == 'Debian' and ansible_lsb.major_release|int >= 8) or
         (ansible_distribution == 'Ubuntu' and ansible_distribution_version|int >= '15') or
         (ansible_os_family == 'RedHat' and ansible_distribution_version >= 7)
+
+- name: Enable mailcatcher service
+  service: name=mailcatcher state=started enabled=yes
+  when: (ansible_distribution == 'Debian' and ansible_lsb.major_release|int >= 8) or
+        (ansible_distribution == 'Ubuntu' and ansible_distribution_version|int >= '15') or
+        (ansible_os_family == 'RedHat' and ansible_distribution_version >= 7)
