--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - ANSIBLE_VERSION=1.7 PLAYBOOK=tests/playbook-travis.yml INVENTORY=tests/inventory-travis
   - ANSIBLE_VERSION=1.8 PLAYBOOK=tests/playbook-travis.yml INVENTORY=tests/inventory-travis
   - ANSIBLE_VERSION=1.9.2 PLAYBOOK=tests/playbook-travis.yml INVENTORY=tests/inventory-travis
+  - ANSIBLE_VERSION=1.9.3 PLAYBOOK=tests/playbook-travis.yml INVENTORY=tests/inventory-travis
 
 before_install:
   - sudo apt-get remove ruby rubygems ruby-dev libruby1.8 ruby1.8 ruby1.8-dev rubygems1.8
