--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,3 +5,4 @@ mailcatcher_smtp_ip: 0.0.0.0  # Set the ip address of the smtp server
 mailcatcher_smtp_port: 1025   # Set the ip address of the smtp server
 mailcatcher_http_ip: 0.0.0.0  # Set the ip address of the http server
 mailcatcher_http_port: 1080   # Set the port address of the http server
+mailcatcher_autostart: true   # Define if mailcatcher should be started after install
